logo and title changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Fuse Angular - Material Design Admin Template</title>
+        <title>Admins | 8710 Photography</title>
         <base href="/">
 
         <meta charset="utf-8">
